# homehost

./: .coverage 2  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  quickstart.md  security.md  troubleshooting.md
homehost/: __init__.py  __main__.py  cli.py
homehost/core/: config.py  detector.py  process.py  project.py  server.py
homehost/dashboard/: __init__.py  api.py  server.py
homehost/dashboard/static/: app.js  index.html  styles.css
homehost/deploy/: __init__.py  git.py  scaffold.py  watcher.py
homehost/network/: __init__.py  dns.py  firewall.py  local.py  named_tunnel.py  ssl.py  tunnel.py
homehost/security/: audit.py  hardening.py  secrets.py
homehost/servers/: caddy.py  installer.py  reverse_proxy.py  static.py
homehost/tui/: __init__.py  app.py
homehost/tui/screens/: __init__.py  manage.py  setup.py  status.py  uninstall.py  welcome.py
homehost/tui/widgets/: __init__.py  log_viewer.py  server_card.py  url_display.py
homehost/utils/: __init__.py  logger.py  network.py  platform.py  updater.py
scripts/: install_caddy_mac.sh  install_caddy_win.ps1  release.py
templates/fastapi-app/: main.py
templates/flask-app/: app.py
templates/flask-app/templates/: index.html
templates/static-html/: index.html  script.js  styles.css
tests/: conftest.py
tests/unit/: test_config.py  test_detector.py  test_network_utils.py  test_project_detection.py  test_security.py
