[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homehost"
version = "0.1.3"
description = "Turn your laptop into a web server. Host websites from home with zero config."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Param Chordiya", email = "param1111.chordiya@gmail.com" }]
keywords = [
    "homehost", "web-server", "self-hosted", "caddy", "cloudflare-tunnel",
    "cli", "tui", "reverse-proxy", "localhost", "hosting", "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "watchdog>=4.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "qrcode[pil]>=7.4.2",
    "bcrypt>=4.1.3",
    "structlog>=24.2.0",
    "psutil>=5.9.8",
    "anyio>=4.3.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "black>=24.4.2",
    "types-psutil>=5.9.5",
]

[project.urls]
Homepage = "https://github.com/ParamChordiya/homehost"
Documentation = "https://github.com/ParamChordiya/homehost/blob/main/docs/quickstart.md"
Repository = "https://github.com/ParamChordiya/homehost"
Issues = "https://github.com/ParamChordiya/homehost/issues"
Changelog = "https://github.com/ParamChordiya/homehost/blob/main/CHANGELOG.md"

[project.scripts]
homehost = "homehost.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["homehost"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "homehost/templates"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=homehost --cov-report=term-missing --cov-report=xml"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["homehost"]
omit = ["tests/*", "homehost/__main__.py"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
